--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,15 @@
 {% block content %}
 <div class="block1">
     <p>
-    Веб-сервис поиска должников в компании. Для начала создайте новый бюджет или выберете
-    существующий из списка в панели навигации.
-    </p>
-</div><br>
-<form method="post">
-    <label for="budgetname">Имя файла нового бюджета: </label>
-    <input name="budgetname" id="budgetname" required> <input type="submit" value="Создать">
-</form>
+        Веб-сервис поиска должников в компании. Для начала создайте новый бюджет или выберете
+        существующий из списка на панели навигации.
+    </p><br>
+    <form method="post">
+        <input name="budgetname" id="budgetname" style="font-size:120%"
+        class="form-control" placeholder="Имя файла" required>
+        <p>
+        <input type="submit" value="Создать" style="font-size:120%">
+    </form>
+</div>
 
 {% endblock %}
