Удалил ненужный spending.py, переместил css файл, мелкие проблемы в html

--- a/templates/editspending.html
+++ b/templates/editspending.html
@@ -31,7 +31,7 @@
         </tr>
         <tr>
             <td>
-                <input name="spendingdate" type="date" value="{{spending.get_date_s()}}" size="10">
+                <input name="spendingdate" type="text" value="{{spending.get_date_s()}}" size="10">
             </td>
             <td>
                 <input name="spendingamount" type="text" value="{{spending.amount}}" size="10">
