--- a/templates/base.html
+++ b/templates/base.html
@@ -38,23 +38,7 @@
 </head>
 <body style="font-family:Arial, Verdana, sans-serif;  font-size:1.0rem; ">
 
-<script>
-    function confirmDeleteBudget(event, budget_file)
-    {
-        if (!confirm('Удалить бюджет "' + budget_file + '" ?'))
-        {
-            event.preventDefault();
-        }
-        return false;
-    }
-    function confirmCopyBudget(event, budget_file)
-    {
-        if (!confirm('Создать копию бюджета "' + budget_file + '" ?'))
-        {
-            event.preventDefault();
-        }
-        return false;
-    }
+<script src="{{url_for('static', filename='confirmBudgetAction.js')}}">
 </script>
 
 <table cellpadding="15" border="0" rules="cols">
