--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,18 @@
 
    h3 {
    text-align: center;
+   }
 
+   .button
+   {
+   font-size: 150%;
+   height: 50px;
+   min-width: 80px;
+   }
+   .pictobutton
+   {
+   height: 30px;
+   width: 30px;
    }
 
     </style>
@@ -37,9 +48,6 @@
     <title>{% block title %}{% endblock %} - Должник</title>
 </head>
 <body style="font-family:Arial, Verdana, sans-serif;  font-size:1.0rem; ">
-
-<script src="{{url_for('static', filename='confirmBudgetAction.js')}}">
-</script>
 
 <table cellpadding="15" border="0" rules="cols">
     <tr>
@@ -53,17 +61,21 @@
                         <td valign="top" align="center">
                             <a href="{{url_for('print_budget', budget_file=budget)}}"
                                title="Посмотреть отчёт">{{budget[:-4]}}</a><br>
+
                             <a href="{{url_for('edit_budget', budget_file=budget)}}" title="Редактировать">
                                 <img src={{url_for('static', filename='edit.png' )}} alt="Редактировать" border="0"
-                                     ></a>
+                                     class="pictobutton"></a>
+
                             <a href="{{url_for('delete_budget', budget_file=budget)}}" title="Удалить"
-                            onclick="confirmDeleteBudget(event,'{{budget}}')">
+                               class="confirm-required" message="Удалить бюджет &quot;{{budget}}&quot;?">
                                 <img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"
-                                     ></a>
+                                     class="pictobutton"></a>
+
                             <a href="{{url_for('copy_budget', budget_file=budget)}}" title="Создать копию"
-                            onclick="confirmCopyBudget(event,'{{budget}}')">
+                               class="confirm-required" message="Создать копию бюджета &quot;{{budget}}&quot;?">
                                 <img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"
-                                     ></a>
+                                     class="pictobutton"></a>
+
                         </td>
                     </tr>
                     {% endfor %}
@@ -79,5 +91,7 @@
 <div class="footer">
     by ukrop-slam_v. 2019
 </div>
+<script src="{{url_for('static', filename='confirmBudgetAction.js')}}">
+</script>
 </body>
 </html>
