--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         <input name="budgetname" id="budgetname" style="font-size:120%"
         class="form-control" placeholder="Имя файла" required>
         <p>
-        <input type="submit" value="Создать" class="button">
+        <input type="submit" value="Создать" class="btn btn-primary mt-2">
     </form>
 </div>
 
