--- a/templates/base.html
+++ b/templates/base.html
@@ -1,98 +1,81 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, inital-scale=1">
     <link href={{url_for('static', filename='floating-labels.css' )}}>
     <link rel="stylesheet" type="text/css" href={{url_for('static', filename='bootstrap.min.css' )}}>
+    <link rel="stylesheet" type="text/css" href={{url_for('static', filename='bootstrap.min.js' )}}>
     <meta charset="UTF-8">
     <style type="text/css">
-   .block1 {
-    font-size: 120%;
-    #font-family: Verdana;
-    width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    background: white;
-    text-align: center;
-   }
-   .footer {
-    font-size: 60%;
-    #font-family: Arial;
-    #font-color: gray;
-    padding-top: 10px;
-    margin-left: 350px;
-   }
-
-   h1 {
-   text-align: center;
-   #font-family: arial;
-   font-size: 150%;
-   }
-
-   h3 {
-   text-align: center;
-   }
-
-   .button
-   {
-   font-size: 150%;
-   height: 50px;
-   min-width: 80px;
-   }
-   .pictobutton
-   {
-   height: 30px;
-   width: 30px;
-   }
-
+        .pictobutton
+        {
+        height: 30px;
+        width: 30px;
+        }
     </style>
-
     <title>{% block title %}{% endblock %} - Должник</title>
 </head>
 <body>
 
-<table cellpadding="15" border="0" rules="cols">
-    <tr>
-        <td valign="top">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-4 border bg-light">
             <nav>
-                <h2 align="center"><a href="{{url_for('main')}}">Главная</a></h2>
-                <hr>
-                <table cellpadding="5" border="0" rules="rows">
-                    {% for budget in g.saved_budgets %}
-                    <tr>
-                        <td valign="top" align="center">
-                            <a href="{{url_for('print_budget', budget_file=budget)}}"
-                               title="Посмотреть отчёт">{{budget[:-4]}}</a><br>
+                <div class="container mt-2 mb-2">
+                    <ul class="nav nav-pills flex-sm-column justify-content-between">
+                        <li class="nav-item">
+                            <h3>
+                                {% if g.budget_file == '' %}
+                                <a class="nav-link active" href="{{url_for('main')}}">Главная</a>
+                                {% else %}
+                                <a class="nav-link" href="{{url_for('main')}}">Главная</a>
+                                {% endif %}
+                            </h3>
+                        </li>
+                        {% for budget in g.saved_budgets %}
+                        <li class="nav-item">
+                            {% if g.budget_file == budget %}
+                                <a class= "nav-link active" href="{{url_for('edit_budget', budget_file=budget)}}" title="Посмотреть отчёт">
+                                    {{budget[:-4]}}
+                                </a>
+                            {% else %}
+                                <a class= "nav-link" href="{{url_for('edit_budget', budget_file=budget)}}" title="Посмотреть отчёт">
+                                    {{budget[:-4]}}
+                                </a>
+                            {% endif %}
+                            <!--<a href="{{url_for('edit_budget', budget_file=budget)}}" title="Редактировать">-->
+                                <!--<img src={{url_for('static', filename='edit.png' )}} alt="Редактировать" border="0"-->
+                                     <!--class="pictobutton"></a>-->
 
-                            <a href="{{url_for('edit_budget', budget_file=budget)}}" title="Редактировать">
-                                <img src={{url_for('static', filename='edit.png' )}} alt="Редактировать" border="0"
-                                     class="pictobutton"></a>
+                            <!--<a href="{{url_for('delete_budget', budget_file=budget)}}" title="Удалить"-->
+                               <!--class="confirm-required" message="Удалить бюджет &quot;{{budget}}&quot;?">-->
+                                <!--<img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"-->
+                                     <!--class="pictobutton"></a>-->
 
-                            <a href="{{url_for('delete_budget', budget_file=budget)}}" title="Удалить"
-                               class="confirm-required" message="Удалить бюджет &quot;{{budget}}&quot;?">
-                                <img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"
-                                     class="pictobutton"></a>
-
-                            <a href="{{url_for('copy_budget', budget_file=budget)}}" title="Создать копию"
-                               class="confirm-required" message="Создать копию бюджета &quot;{{budget}}&quot;?">
-                                <img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"
-                                     class="pictobutton"></a>
-
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </table>
+                            <!--<a href="{{url_for('copy_budget', budget_file=budget)}}" title="Создать копию"-->
+                               <!--class="confirm-required" message="Создать копию бюджета &quot;{{budget}}&quot;?">-->
+                                <!--<img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"-->
+                                     <!--class="pictobutton"></a>-->
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </nav>
-        </td>
-        <td valign="top">
+        </div>
+        <div class="col-sm">
             {% block header %}{% endblock %}
             {% block content %}{% endblock %}
-        </td>
-    </tr>
-</table>
-<div class="footer">
-    by ukrop-slam_v. 2019
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-4">
+            <small class="text-muted">by ukrop-slam_v. 2019</small>
+        </div>
+    </div>
 </div>
-<script src="{{url_for('static', filename='confirmBudgetAction.js')}}">
-</script>
+
+<script src="{{url_for('static', filename='confirmBudgetAction.js')}}"></script>
+
 </body>
 </html>
