--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,21 @@
 {% extends 'base.html' %}
 
 {% block header %}
-<h1>{% block title %}Главная{% endblock %}</h1>
+<h3 class="text-info text-">{% block title %}Главная{% endblock %}</h3>
 {% endblock %}
 
 {% block content %}
-<div class="block1">
-    <p>
+<div class="d-flex flex-column">
+    <p class="text-center">
         Веб-сервис поиска должников в компании. Для начала создайте новый бюджет или выберете
         существующий из списка на панели навигации.
-    </p><br>
+    </p>
     <form method="post" action="{{url_for('main')}}">
-        <input name="budgetname" id="budgetname" style="font-size:120%"
-        class="form-control" placeholder="Имя файла" required>
-        <p>
-        <input type="submit" value="Создать" class="btn btn-primary mt-2">
+        <div class="d-flex flex-column align-items-center flex-fill">
+            <input name="budgetname" id="budgetname"
+                   class="form-control w-auto" placeholder="Имя файла" required>
+            <input type="submit" value="Создать" class="btn btn-success btn-lg mt-2">
+        </div>
     </form>
 </div>
 
