--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-4">
+        <div class="col-auto pt-4">
             <small class="text-muted">by ukrop-slam_v. 2019</small>
         </div>
     </div>
